radiusd/rewrite.y.output
Terminals unused in grammar

   FOR
   BOGUS


State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: input

    2 input: dcllist
    3      | expr

    4 dcllist: decl
    5        | dcllist decl
    6        | dcllist error

    7 decl: fundecl begin list end

    8 fundecl: TYPE IDENT dclparm
    9        | TYPE FUN dclparm

   10 begin: obrace
   11      | obrace autodcl

   12 end: cbrace

   13 obrace: '{'

   14 cbrace: '}'

   15 autodcl: autovar
   16        | autodcl autovar

   17 autovar: TYPE varlist ';'

   18 varlist: IDENT
   19        | varlist ',' IDENT

   20 dclparm: '(' ')'
   21        | '(' parmlist ')'

   22 parmlist: parm
   23         | parmlist ',' parm

   24 parm: TYPE IDENT

   25 args: /* empty */
   26     | arglist

   27 arglist: arg
   28        | arglist ',' arg

   29 arg: expr

   30 list: stmt
   31     | list stmt

   32 stmt: begin list end
   33     | expr ';'
   34     | IF cond stmt
   35     | IF cond stmt else stmt
   36     | RETURN expr ';'
   37     | while cond stmt

   38 @1: /* empty */

   39 stmt: do stmt @1 WHILE cond ';'
   40     | BREAK ';'
   41     | CONTINUE ';'
   42     | DELETE ATTR ';'
   43     | DELETE ATTR '(' expr ')' ';'

   44 while: WHILE

   45 do: DO

   46 else: ELSE

   47 cond: '(' expr ')'

   48 expr: NUMBER
   49     | STRING
   50     | REFERENCE
   51     | VARIABLE
   52     | IDENT
   53     | VARIABLE '=' expr
   54     | ATTR
   55     | ATTR '(' expr ')'
   56     | '*' ATTR
   57     | '*' ATTR '(' expr ')'
   58     | ATTR '=' expr
   59     | ATTR '(' expr ')' '=' expr
   60     | FUN '(' args ')'
   61     | BUILTIN '(' args ')'
   62     | expr '+' expr
   63     | expr '-' expr
   64     | expr '*' expr
   65     | expr '/' expr
   66     | expr '%' expr
   67     | expr '|' expr
   68     | expr '&' expr
   69     | expr '^' expr
   70     | expr SHL expr
   71     | expr SHR expr
   72     | expr AND expr
   73     | expr OR expr
   74     | '-' expr
   75     | '+' expr
   76     | NOT expr
   77     | '(' expr ')'
   78     | '(' TYPE ')' expr
   79     | expr EQ expr
   80     | expr NE expr
   81     | expr LT expr
   82     | expr LE expr
   83     | expr GT expr
   84     | expr GE expr
   85     | expr MT STRING
   86     | expr NM STRING


Terminals, with rules where they appear

$end (0) 0
'%' (37) 66
'&' (38) 68
'(' (40) 20 21 43 47 55 57 59 60 61 77 78
')' (41) 20 21 43 47 55 57 59 60 61 77 78
'*' (42) 56 57 64
'+' (43) 62 75
',' (44) 19 23 28
'-' (45) 63 74
'/' (47) 65
';' (59) 17 33 36 39 40 41 42 43
'=' (61) 53 58 59
'^' (94) 69
'{' (123) 13
'|' (124) 67
'}' (125) 14
error (256) 6
TYPE (258) 8 9 17 24 78
IF (259) 34 35
ELSE (260) 46
RETURN (261) 36
WHILE (262) 39 44
FOR (263)
DO (264) 45
BREAK (265) 40
CONTINUE (266) 41
DELETE (267) 42 43
STRING (268) 49 85 86
IDENT (269) 8 18 19 24 52
NUMBER (270) 48
REFERENCE (271) 50
VARIABLE (272) 51 53
FUN (273) 9 60
BUILTIN (274) 61
ATTR (275) 42 43 54 55 56 57 58 59
BOGUS (276)
OR (277) 73
AND (278) 72
NM (279) 86
MT (280) 85
NE (281) 80
EQ (282) 79
GE (283) 84
GT (284) 83
LE (285) 82
LT (286) 81
SHR (287) 71
SHL (288) 70
TYPECAST (289)
NOT (290) 76
UMINUS (291)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
input (54)
    on left: 2 3, on right: 1
dcllist (55)
    on left: 4 5 6, on right: 2 5 6
decl (56)
    on left: 7, on right: 4 5
fundecl (57)
    on left: 8 9, on right: 7
begin (58)
    on left: 10 11, on right: 7 32
end (59)
    on left: 12, on right: 7 32
obrace (60)
    on left: 13, on right: 10 11
cbrace (61)
    on left: 14, on right: 12
autodcl (62)
    on left: 15 16, on right: 11 16
autovar (63)
    on left: 17, on right: 15 16
varlist (64)
    on left: 18 19, on right: 17 19
dclparm (65)
    on left: 20 21, on right: 8 9
parmlist (66)
    on left: 22 23, on right: 21 23
parm (67)
    on left: 24, on right: 22 23
args (68)
    on left: 25 26, on right: 60 61
arglist (69)
    on left: 27 28, on right: 26 28
arg (70)
    on left: 29, on right: 27 28
list (71)
    on left: 30 31, on right: 7 31 32
stmt (72)
    on left: 32 33 34 35 36 37 39 40 41 42 43, on right: 30 31 34 35
    37 39
@1 (73)
    on left: 38, on right: 39
while (74)
    on left: 44, on right: 37
do (75)
    on left: 45, on right: 39
else (76)
    on left: 46, on right: 35
cond (77)
    on left: 47, on right: 34 35 37 39
expr (78)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86,
    on right: 3 29 33 36 43 47 53 55 57 58 59 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86


State 0

    0 $accept: . program $end

    TYPE       shift, and go to state 1
    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    program  go to state 15
    input    go to state 16
    dcllist  go to state 17
    decl     go to state 18
    fundecl  go to state 19
    expr     go to state 20


State 1

    8 fundecl: TYPE . IDENT dclparm
    9        | TYPE . FUN dclparm

    IDENT  shift, and go to state 21
    FUN    shift, and go to state 22


State 2

   49 expr: STRING .

    $default  reduce using rule 49 (expr)


State 3

   52 expr: IDENT .

    $default  reduce using rule 52 (expr)


State 4

   48 expr: NUMBER .

    $default  reduce using rule 48 (expr)


State 5

   50 expr: REFERENCE .

    $default  reduce using rule 50 (expr)


State 6

   51 expr: VARIABLE .
   53     | VARIABLE . '=' expr

    '='  shift, and go to state 23

    $default  reduce using rule 51 (expr)


State 7

   60 expr: FUN . '(' args ')'

    '('  shift, and go to state 24


State 8

   61 expr: BUILTIN . '(' args ')'

    '('  shift, and go to state 25


State 9

   54 expr: ATTR .
   55     | ATTR . '(' expr ')'
   58     | ATTR . '=' expr
   59     | ATTR . '(' expr ')' '=' expr

    '='  shift, and go to state 26
    '('  shift, and go to state 27

    $default  reduce using rule 54 (expr)


State 10

   75 expr: '+' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 28


State 11

   74 expr: '-' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 29


State 12

   56 expr: '*' . ATTR
   57     | '*' . ATTR '(' expr ')'

    ATTR  shift, and go to state 30


State 13

   76 expr: NOT . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 31


State 14

   77 expr: '(' . expr ')'
   78     | '(' . TYPE ')' expr

    TYPE       shift, and go to state 32
    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 33


State 15

    0 $accept: program . $end

    $end  shift, and go to state 34


State 16

    1 program: input .

    $default  reduce using rule 1 (program)


State 17

    2 input: dcllist .
    5 dcllist: dcllist . decl
    6        | dcllist . error

    error  shift, and go to state 35
    TYPE   shift, and go to state 1

    $end  reduce using rule 2 (input)

    decl     go to state 36
    fundecl  go to state 19


State 18

    4 dcllist: decl .

    $default  reduce using rule 4 (dcllist)


State 19

    7 decl: fundecl . begin list end

    '{'  shift, and go to state 37

    begin   go to state 38
    obrace  go to state 39


State 20

    3 input: expr .
   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    OR   shift, and go to state 40
    AND  shift, and go to state 41
    NM   shift, and go to state 42
    MT   shift, and go to state 43
    '|'  shift, and go to state 44
    '^'  shift, and go to state 45
    '&'  shift, and go to state 46
    NE   shift, and go to state 47
    EQ   shift, and go to state 48
    GE   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    LT   shift, and go to state 52
    SHR  shift, and go to state 53
    SHL  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    '%'  shift, and go to state 59

    $default  reduce using rule 3 (input)


State 21

    8 fundecl: TYPE IDENT . dclparm

    '('  shift, and go to state 60

    dclparm  go to state 61


State 22

    9 fundecl: TYPE FUN . dclparm

    '('  shift, and go to state 60

    dclparm  go to state 62


State 23

   53 expr: VARIABLE '=' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 63


State 24

   60 expr: FUN '(' . args ')'

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    $default  reduce using rule 25 (args)

    args     go to state 64
    arglist  go to state 65
    arg      go to state 66
    expr     go to state 67


State 25

   61 expr: BUILTIN '(' . args ')'

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    $default  reduce using rule 25 (args)

    args     go to state 68
    arglist  go to state 65
    arg      go to state 66
    expr     go to state 67


State 26

   58 expr: ATTR '=' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 69


State 27

   55 expr: ATTR '(' . expr ')'
   59     | ATTR '(' . expr ')' '=' expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 70


State 28

   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   75     | '+' expr .
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    $default  reduce using rule 75 (expr)


State 29

   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   74     | '-' expr .
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    $default  reduce using rule 74 (expr)


State 30

   56 expr: '*' ATTR .
   57     | '*' ATTR . '(' expr ')'

    '('  shift, and go to state 71

    $default  reduce using rule 56 (expr)


State 31

   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   76     | NOT expr .
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    $default  reduce using rule 76 (expr)


State 32

   78 expr: '(' TYPE . ')' expr

    ')'  shift, and go to state 72


State 33

   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   77     | '(' expr . ')'
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    OR   shift, and go to state 40
    AND  shift, and go to state 41
    NM   shift, and go to state 42
    MT   shift, and go to state 43
    '|'  shift, and go to state 44
    '^'  shift, and go to state 45
    '&'  shift, and go to state 46
    NE   shift, and go to state 47
    EQ   shift, and go to state 48
    GE   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    LT   shift, and go to state 52
    SHR  shift, and go to state 53
    SHL  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    '%'  shift, and go to state 59
    ')'  shift, and go to state 73


State 34

    0 $accept: program $end .

    $default  accept


State 35

    6 dcllist: dcllist error .

    $default  reduce using rule 6 (dcllist)


State 36

    5 dcllist: dcllist decl .

    $default  reduce using rule 5 (dcllist)


State 37

   13 obrace: '{' .

    $default  reduce using rule 13 (obrace)


State 38

    7 decl: fundecl begin . list end

    IF         shift, and go to state 74
    RETURN     shift, and go to state 75
    WHILE      shift, and go to state 76
    DO         shift, and go to state 77
    BREAK      shift, and go to state 78
    CONTINUE   shift, and go to state 79
    DELETE     shift, and go to state 80
    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '{'        shift, and go to state 37
    '('        shift, and go to state 14

    begin   go to state 81
    obrace  go to state 39
    list    go to state 82
    stmt    go to state 83
    while   go to state 84
    do      go to state 85
    expr    go to state 86


State 39

   10 begin: obrace .
   11      | obrace . autodcl

    TYPE  shift, and go to state 87

    $default  reduce using rule 10 (begin)

    autodcl  go to state 88
    autovar  go to state 89


State 40

   73 expr: expr OR . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 90


State 41

   72 expr: expr AND . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 91


State 42

   86 expr: expr NM . STRING

    STRING  shift, and go to state 92


State 43

   85 expr: expr MT . STRING

    STRING  shift, and go to state 93


State 44

   67 expr: expr '|' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 94


State 45

   69 expr: expr '^' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 95


State 46

   68 expr: expr '&' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 96


State 47

   80 expr: expr NE . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 97


State 48

   79 expr: expr EQ . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 98


State 49

   84 expr: expr GE . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 99


State 50

   83 expr: expr GT . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 100


State 51

   82 expr: expr LE . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 101


State 52

   81 expr: expr LT . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 102


State 53

   71 expr: expr SHR . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 103


State 54

   70 expr: expr SHL . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 104


State 55

   62 expr: expr '+' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 105


State 56

   63 expr: expr '-' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 106


State 57

   64 expr: expr '*' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 107


State 58

   65 expr: expr '/' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 108


State 59

   66 expr: expr '%' . expr

    STRING     shift, and go to state 2
    IDENT      shift, and go to state 3
    NUMBER     shift, and go to state 4
    REFERENCE  shift, and go to state 5
    VARIABLE   shift, and go to state 6
    FUN        shift, and go to state 7
    BUILTIN    shift, and go to state 8
    ATTR       shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    NOT        shift, and go to state 13
    '('        shift, and go to state 14

    expr  go to state 109


State 60

   20 dclparm: '(' . ')'
   21        | '(' . parmlist ')'

    TYPE  shift, and go to state 110
    ')'   shift, and go to state 111

    parmlist  go to state 112
    parm      go to state 113


State 61

    8 fundecl: TYPE IDENT dclparm .

    $default  reduce using rule 8 (fundecl)


State 62

    9 fundecl: TYPE FUN dclparm .

    $default  reduce using rule 9 (fundecl)


State 63

   53 expr: VARIABLE '=' expr .
   62     | expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    OR   shift, and go to state 40
    AND  shift, and go to state 41
    NM   shift, and go to state 42
    MT   shift, and go to state 43
    '|'  shift, and go to state 44
    '^'  shift, and go to state 45
    '&'  shift, and go to state 46
    NE   shift, and go to state 47
    EQ   shift, and go to state 48
    GE   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    LT   shift, and go to state 52
    SHR  shift, and go to state 53
    SHL  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    '%'  shift, and go to state 59

    $default  reduce using rule 53 (expr)


State 64

   60 expr: FUN '(' args . ')'

    ')'  shift, and go to state 114


State 65

   26 args: arglist .
   28 arglist: arglist . ',' arg

    ','  shift, and go to state 115

    $default  reduce using rule 26 (args)


State 66

   27 arglist: arg .

    $default  reduce using rule 27 (arglist)


State 67

   29 arg: expr .
   62 expr: expr . '+' expr
   63     | expr . '-' expr
   64     | expr . '*' expr
   65     | expr . '/' expr
   66     | expr . '%' expr
   67     | expr . '|' expr
   68     | expr . '&' expr
   69     | expr . '^' expr
   70     | expr . SHL expr
   71     | expr . SHR expr
   72     | expr . AND expr
   73     | expr . OR expr
   79     | expr . EQ expr
   80     | expr . NE expr
   81     | expr . LT expr
   82     | expr . LE expr
   83     | expr . GT expr
   84     | expr . GE expr
   85     | expr . MT STRING
   86     | expr . NM STRING

    OR   shift, and go to state 40
    AND  shift, and go to state 41
    NM   shift, and go to state 42
    MT   shift, and go to state 43
    '|'  shift, and go to state 44
    '^'  shift, and go to state 45
    '&'  shift, and go to state 46
    NE   shift, and go to state 47
    EQ   shift, and go to state 48
    GE   shift, and go to state 49
    GT   shift, and go to state 50
    LE   shift, and go to state 51
    LT   shift, and go to state 52
    SHR  shift, and go to state 53
    SHL  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58
    '%'  shift, and go to state 59

    $default  reduce using rule 29 (arg)


State 68

   61 expr: BUILTIN '(' args . ')'

    ')'  shift, and go to state 116


State 69
